2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Include cairo-hash-private.h.

	* src/Makefile.am (libcairo_la_SOURCES): Add cairo-hash.c and
	cairo-hash-private.h since we're actually going to start using
	them now.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_set_font_face): Simplify the
	implementation by taking advantage of the fact that destroy and
	reference are safe for NULL, and that reference returns its
	argument.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairo-gstate.c: (_cairo_gstate_translate),
	(_cairo_gstate_scale), (_cairo_gstate_rotate),
	(_cairo_gstate_transform), (_cairo_gstate_set_matrix),
	(_cairo_gstate_identity_matrix), (_cairo_gstate_unset_scaled_font),
	(_cairo_gstate_set_font_size), (_cairo_gstate_set_font_matrix),
	(_cairo_gstate_set_font_options),
	(_cairo_gstate_ensure_scaled_font),
	(_cairo_gstate_get_font_extents), (_cairo_gstate_text_to_glyphs),
	(_cairo_gstate_set_font_face), (_cairo_gstate_glyph_extents),
	(_cairo_gstate_show_glyphs), (_cairo_gstate_glyph_path):
	Rename two functions:

	_cairo_gstate_unset_font  -> _cairo_gstate_unset_scaled_font
	_cairo_gstate_ensure_font -> _cairo_gstate_ensure_scaled_font

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Entagle the cairo_unscaled_font_t typedef.

2005-08-05  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Rename font_face_backend->create_font to
	scaled_font_create. Group the scaled_font prototypes together. A
	little more simple -> toy renaming.

	* src/cairo-font.c: (_cairo_toy_font_face_create_from_cache_key),
	(_cairo_toy_font_face_destroy),
	(_cairo_toy_font_face_create):
	* src/cairo-gstate.c: (_cairo_gstate_select_font_face),
	(_cairo_gstate_ensure_font_face):
	A little more simple -> toy renaming.

	* src/cairo-font.c: (_cairo_toy_font_face_scaled_font_create),
	(_cairo_inner_font_cache_create_entry):
	* src/cairo-ft-font.c: (_cairo_ft_font_face_scaled_font_create):